--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="https://docs.google.com/document/d/1IcDXE3ENhV2d6TehCW7VVT6UbULGJ53u2ccCVBmDq7s/edit" class="text-indigo-600 font-medium">Consulter &rarr;
+            </a>
+
         </div>
     </div>
 </div>
@@ -209,7 +211,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
+            <a href="https://docs.google.com/spreadsheets/d/1GzauKMeoQ88Ox6wdXgL4JV7L9GqA_San1gZZ17uZFeg/edit?usp=sharing" class="text-indigo-600 font-medium" src="#">Consulter le suivi &rarr;</a>
         </div>
 
         <!-- Colonne 2 -->
