--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-            <a href="https://docs.google.com/spreadsheets/d/1GzauKMeoQ88Ox6wdXgL4JV7L9GqA_San1gZZ17uZFeg/edit?usp=sharing" class="text-indigo-600 font-medium" src="#">Consulter le suivi &rarr;</a>
+            <a href="../b2-profile/assets/tableau alternance.xlsx" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
         </div>
 
         <!-- Colonne 2 -->
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
+            <a href="../b2-profile/assets/roadmap de compétences.xlsx" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
         </div>
     </div>
 </div>
