--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="https://docs.google.com/document/d/1IcDXE3ENhV2d6TehCW7VVT6UbULGJ53u2ccCVBmDq7s/edit" class="text-indigo-600 font-medium">Consulter &rarr;
+            <a href="../b2-profile/assets/Mail de relance.pdf" class="text-indigo-600 font-medium">Consulter &rarr;
             </a>
 
         </div>
