--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Mail de relance</h3>
-            <a href="../b2-profile/assets/Mail de relance.pdf" class="text-indigo-600 font-medium">Consulter &rarr;
+            <a href="../assets/Mail de relance.pdf" class="text-indigo-600 font-medium">Consulter &rarr;
             </a>
 
         </div>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-            <a href="../b2-profile/assets/roadmap de compétences.xlsx" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
+            <a href="../assets/roadmap de compétences.xlsx" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
         </div>
     </div>
 </div>
