--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Lettre de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./assets/lettre de motivation.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Message de motivation -->
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Message de motivation</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./assets/Phrase d'accroche _.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Mail de relance -->
