--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Curriculum Vitae</h3>
-            <a href="#" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="./assets/CV Quaglieri.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Lettre de motivation -->
@@ -184,6 +184,7 @@
     <p class="text-indigo-600 font-semibold">Mettre en avant son parcours professionnel</p>
     <h1 class="text-4xl font-bold text-gray-900 mt-2 mb-4">Ma page LinkedIn</h1>
     <p class="text-gray-500 mb-12">Rentrer en contact avec des professionnels du métier et les recruteurs du marché.</p>
+    <a href="https://www.linkedin.com/in/lisa-quaglieri/" class="text-indigo-600 font-medium">Consulter &rarr;
 
     <!-- Image centrée -->
     <div class="flex justify-center">
