--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-            <a href="../b2-profile/assets/tableau alternance.xlsx" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
+            <a href="../b2-profile/assets/tableau alternancecsv.csv" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
         </div>
 
         <!-- Colonne 2 -->
