--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Recherche d'alternance</h3>
-            <a href="./assets/tableau alternancecsv.csv" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
+            <a href="https://docs.google.com/spreadsheets/d/1AcNiW9qrcN36rO6_e72upaRZQCV2JJP-I1dtaeM_POM/edit?usp=sharing" class="text-indigo-600 font-medium">Consulter le suivi &rarr;</a>
         </div>
 
         <!-- Colonne 2 -->
