ajout lien drive

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Message de motivation</h3>
-            <a href="./assets/Phrase d'accroche _.pdf" class="text-indigo-600 font-medium">Consulter &rarr;</a>
+            <a href="https://docs.google.com/document/d/1wN2qS8od6pJ8fB_3senjZDYzJIHua06rzxyHXVwtez0/edit" class="text-indigo-600 font-medium">Consulter &rarr;</a>
         </div>
 
         <!-- Mail de relance -->
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <h3 class="text-lg font-semibold mb-2">Montée en compétence</h3>
-            <a href="./assets/roadmap_devsecops.csv" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
+            <a href="https://docs.google.com/spreadsheets/d/1XFeBv364QtQNSafHNWBnfqwMSKEEDolIONuaCN7JdTk/edit?usp=sharing" class="text-indigo-600 font-medium">Consulter la roadmap &rarr;</a>
         </div>
     </div>
 </div>
